# SPyOD

./: LICENSE  README.md  calc_SPOD.py  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml  publish_SPyOD.yml
example_free_jet/: example_SPOD_free_jet.ipynb
src/SPOD/: find_mode_pairs_from_SPOD.py
src/spyod/: findpairs.py  spod.py
